<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.tenniscourtcounter.MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="1"
        android:scaleType="centerCrop"
        android:src="@drawable/arrows" />

    <RelativeLayout
        android:id="@+id/backgd"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/black">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="32dp"
                android:fontFamily="sans-serif"
                android:shadowColor="@android:color/black"
                android:shadowDx="0"
                android:shadowDy="0"
                android:shadowRadius="3"
                android:text="@string/the_score_keeper_app"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@android:color/darker_gray"
                android:textSize="36sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="32dp"
                android:fontFamily="sans-serif"
                android:shadowColor="@android:color/black"
                android:shadowDx="0"
                android:shadowDy="0"
                android:shadowRadius="3"
                android:text="@string/please_select_your_sport"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@android:color/darker_gray"
                android:textSize="22sp"
                android:textStyle="bold" />


            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:onClick="LaunchTennisActivity"
                android:text="@string/tennis" />


            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_margin="8dp"
                android:onClick="LaunchFootballActivity"
                android:text="@string/football" />


            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_margin="8dp"
                android:onClick="LaunchBasketballActivity"
                android:text="@string/basketball" />


        </LinearLayout>


    </RelativeLayout>

</RelativeLayout>
