<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.tenniscourtcounter.FootballActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="1"
        android:scaleType="centerCrop"
        android:src="@drawable/football" />

    <RelativeLayout
        android:id="@+id/backgd"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/black">

        <LinearLayout
            android:id="@+id/counter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:orientation="horizontal"

            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="8dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="32dp"
                    android:fontFamily="sans-serif"
                    android:shadowColor="@android:color/black"
                    android:shadowDx="0"
                    android:shadowDy="0"
                    android:shadowRadius="3"
                    android:text="@string/team_a"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="36sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/points_p1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="32dp"
                    android:shadowColor="@android:color/black"
                    android:shadowDx="0"
                    android:shadowDy="0"
                    android:shadowRadius="3"
                    android:text="0"
                    android:textColor="@android:color/holo_green_dark"
                    android:textSize="42sp"
                    android:textStyle="bold" />


                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="point_p1"
                    android:text="@string/point" />


            </LinearLayout>

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@android:color/darker_gray" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="32dp"
                    android:fontFamily="sans-serif"
                    android:shadowColor="@android:color/black"
                    android:shadowDx="0"
                    android:shadowDy="0"
                    android:shadowRadius="3"
                    android:text="@string/team_b"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="36sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/points_p2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="32dp"
                    android:shadowColor="@android:color/black"
                    android:shadowDx="0"
                    android:shadowDy="0"
                    android:shadowRadius="3"
                    android:text="0"
                    android:textColor="@android:color/holo_green_dark"
                    android:textSize="42sp"
                    android:textStyle="bold" />


                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="point_p2"
                    android:text="@string/point" />

            </LinearLayout>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal">

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:onClick="LaunchHomeActivity"
                android:text="@string/home" />

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:onClick="new_game"
                android:text="@string/new_game" />


        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>
