<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/black"
    android:orientation="vertical"
    tools:context="com.example.android.tenniscourtcounter.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        android:orientation="vertical"

        >

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/tennisballs" />

        <LinearLayout
            android:id="@+id/backgdpopup"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/black"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/tiebreak"
                android:textColor="@android:color/white"
                android:textSize="42sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="8dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginBottom="32dp"
                        android:fontFamily="sans-serif"
                        android:shadowColor="@android:color/white"
                        android:shadowDx="0"
                        android:shadowDy="0"
                        android:shadowRadius="3"
                        android:text="@string/player_1"
                        android:textColor="@android:color/darker_gray"
                        android:textSize="36sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/points_tiebreak_p1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginBottom="32dp"
                        android:shadowColor="@android:color/black"
                        android:shadowDx="0"
                        android:shadowDy="0"
                        android:shadowRadius="3"
                        android:text="0"
                        android:textColor="@android:color/holo_red_dark"
                        android:textSize="42sp"
                        android:textStyle="bold" />


                    <Button
                        android:id="@+id/button_tie_p1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/point" />


                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginBottom="32dp"
                        android:fontFamily="sans-serif"
                        android:shadowColor="@android:color/white"
                        android:shadowDx="0"
                        android:shadowDy="0"
                        android:shadowRadius="3"
                        android:text="@string/player_2"
                        android:textColor="@android:color/darker_gray"
                        android:textSize="36sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/points_tiebreak_p2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginBottom="32dp"
                        android:shadowColor="@android:color/black"
                        android:shadowDx="0"
                        android:shadowDy="0"
                        android:shadowRadius="3"
                        android:text="0"
                        android:textColor="@android:color/holo_red_dark"
                        android:textSize="42sp"
                        android:textStyle="bold" />

                    <Button
                        android:id="@+id/button_tie_p2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/point"

                        />

                </LinearLayout>
            </LinearLayout>

        </LinearLayout>


    </RelativeLayout>
</LinearLayout>
